* Fix for icon naming * For for bottom spacing

--- a/source/stylesheets/_application/_view.scss
+++ b/source/stylesheets/_application/_view.scss
@@ -1,5 +1,5 @@
 &-view{
-	margin:{bottom:60px;};
+	margin:{bottom:48px;};
 
 	// <children>
 	&-header{
